nuclearbomb/namespaces/monitoring/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "grafana.hiibolt.com"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
